# SRPlan4Snake

./: BaseLibInstall-PATH 设置.txt  CMakeLists.txt  README.md  README.txt
Applications/SRPlanApp/: CMakeLists.txt  Main.cxx  qSlicerAppAboutDialog.h  qSlicerAppErrorReportDialog.h  qSlicerAppMainWindow.cxx  qSlicerAppMainWindow.h  qSlicerAppMainWindow_p.h
Applications/SRPlanApp/Resources/: SRPlan.qrc  SRPlanApp.qrc
Base/: CMakeLists.txt
Base/Logic/: CMakeLists.txt  vtkSlicerApplicationLogic.cxx  vtkSlicerApplicationLogic.h  vtkSlicerBaseLogicWin32Header.h
Base/QTApp/: CMakeLists.txt  qSlicerApplicationHelper.cxx  qSlicerApplicationHelper.h
Base/QTCore/: CMakeLists.txt  qSlicerAbstractCoreModule.cxx  qSlicerAbstractCoreModule.h  qSlicerAbstractModuleFactoryManager.cxx  qSlicerAbstractModuleFactoryManager.h  qSlicerAbstractModuleRepresentation.h  qSlicerCoreApplication.cxx  qSlicerCoreApplication.h  qSlicerCoreApplication_p.h  qSlicerCoreCommandOptions.cxx  qSlicerCoreCommandOptions.h  qSlicerCoreIOManager.h  qSlicerFileReader.h  qSlicerFileWriter.h  qSlicerIO.h  qSlicerIOOptions.h  qSlicerIOOptions_p.h  qSlicerLoadableModuleFactory.cxx  qSlicerLoadableModuleFactory.h  qSlicerModuleFactoryManager.h  qSlicerModuleManager.h  qSlicerObject.h  qSlicerPersistentCookieJar.h  qSlicerSceneBundleReader.h  qSlicerScriptedUtils_p.h  qSlicerSlicer2SceneReader.h  qSlicerUtils.cxx  qSlicerUtils.h  qSlicerXcedeCatalogReader.h
Base/QTGUI/: CMakeLists.txt  qSlicerAbstractModule.h  qSlicerAbstractModulePanel.h  qSlicerAbstractModuleWidget.h  qSlicerActionsDialog.cxx  qSlicerActionsDialog.h  qSlicerApplication.cxx  qSlicerApplication.h  qSlicerCommandOptions.cxx  qSlicerCommandOptions.h  qSlicerDarkStyle.h  qSlicerDataDialog.cxx  qSlicerDataDialog.h  qSlicerDirectoryListView.h  qSlicerFileDialog.h  qSlicerFileWriterOptionsWidget.h  qSlicerIOManager.h  qSlicerIOOptionsWidget.h  qSlicerIconEnginePlugin.cxx  qSlicerIconEnginePlugin.h  qSlicerLayoutManager.cxx  qSlicerLayoutManager.h  qSlicerLoadableModule.cxx  qSlicerLoadableModule.h  qSlicerModelsDialog.h  qSlicerModuleFactoryFilterModel.h  qSlicerModulePanel.cxx  qSlicerModulePanel.h  qSlicerModuleSelectorToolBar.h  qSlicerModulesListView.h  qSlicerModulesMenu.h  qSlicerMouseModeToolBar.h  qSlicerMouseModeToolBar_p.h  qSlicerNodeWriter.h  qSlicerNodeWriterOptionsWidget.h  qSlicerSaveDataDialog.cxx  qSlicerSaveDataDialog.h  qSlicerSettingsCachePanel.h  qSlicerSettingsDeveloperPanel.h  qSlicerSettingsGeneralPanel.cxx  (+12 more)
Base/QTGUI/DesignerPlugins/: CMakeLists.txt  qSlicerModulePanelPlugin.h  qSlicerModulesListViewPlugin.h  qSlicerMouseModeToolBarPlugin.h  qSlicerQTGUIAbstractPlugin.h  qSlicerQTGUIPlugins.cxx  qSlicerQTGUIPlugins.h  qSlicerWidgetPlugin.h
Base/QTGUI/StylePlugins/: CMakeLists.txt  qSlicerStylePlugin.cxx  qSlicerStylePlugin.h
Cmake/: SRPlanQtSetup.cmake  (+26 more)
Libs/SegmentationCore/: CMakeLists.txt  vtkBinaryLabelmapToClosedSurfaceConversionRule.h  vtkCalculateOversamplingFactor.cxx  vtkCalculateOversamplingFactor.h  vtkClosedSurfaceToBinaryLabelmapConversionRule.cxx  vtkClosedSurfaceToBinaryLabelmapConversionRule.h  vtkOrientedImageData.cxx  vtkOrientedImageData.h  vtkOrientedImageDataResample.h  vtkPlanarContourToClosedSurfaceConversionRule.cxx  vtkPlanarContourToClosedSurfaceConversionRule.h  vtkSegment.cxx  vtkSegment.h  vtkSegmentation.cxx  vtkSegmentation.h  vtkSegmentationConverter.cxx  vtkSegmentationConverter.h  vtkSegmentationConverterFactory.cxx  vtkSegmentationConverterFactory.h  vtkSegmentationConverterRule.h  vtkSegmentationCoreConfigure.h.in  vtkTopologicalHierarchy.h
Libs/SegmentationCore/Testing/: CMakeLists.txt  vtkSegmentationConverterTest1.cxx  vtkSegmentationTest1.cxx
Modules/Core/: CMakeLists.txt  qSlicerCoreModule.h  qSlicerCoreModuleFactory.h
Modules/Core/EventBroker/: qSlicerEventBrokerModule.cxx  qSlicerEventBrokerModule.h  qSlicerEventBrokerModuleWidget.h
Modules/Core/ROI/: qSlicerROIModule.h  qSlicerROIModuleWidget.h
Modules/Loadable/: CMakeLists.txt
Modules/Loadable/Annotations/: CMakeLists.txt  qSlicerAnnotationsIOOptionsWidget.h  qSlicerAnnotationsModule.cxx  qSlicerAnnotationsModule.h
Modules/Loadable/BDose/: CMakeLists.txt  qSlicerReformatModule.cxx
Modules/Loadable/Cameras/: CMakeLists.txt  qSlicerCamerasModule.cxx  qSlicerCamerasModule.h  qSlicerCamerasModuleWidget.h
Modules/Loadable/Colors/: CMakeLists.txt  qSlicerColorsModule.cxx  qSlicerColorsModule.h  qSlicerColorsModuleWidget.cxx  qSlicerColorsModuleWidget.h
Modules/Loadable/Data/: CMakeLists.txt  qSlicerDataModule.cxx  qSlicerDataModule.h  qSlicerDataModuleWidget.cxx  qSlicerDataModuleWidget.h  qSlicerSceneIOOptionsWidget.h  qSlicerSceneReader.h  qSlicerSceneWriter.h
Modules/Loadable/DoubleArrays/: CMakeLists.txt  qSlicerDoubleArraysModule.cxx  qSlicerDoubleArraysModule.h
Modules/Loadable/Markups/: qSlicerMarkupsModule.cxx  qSlicerMarkupsModule.h  qSlicerMarkupsModuleWidget.cxx  qSlicerMarkupsModuleWidget.h  qSlicerMarkupsSettingsPanel.h
Modules/Loadable/Models/: CMakeLists.txt  qSlicerModelsModule.cxx  qSlicerModelsModule.h  qSlicerModelsModuleWidget.cxx  qSlicerModelsModuleWidget.h  qSlicerScalarOverlayIOOptionsWidget.h
Modules/Loadable/PathPlan/: CMakeLists.txt  qSRPlanPathPlanModule.cxx  qSRPlanPathPlanModule.h  qSRPlanPathPlanModuleWidget--rawposition.cxx  qSRPlanPathPlanModuleWidget.cxx  qSRPlanPathPlanModuleWidget.h  qSlicerDoseVolumeHistogramModule.cxx  qSlicerDoseVolumeHistogramModule.h  qSlicerDoseVolumeHistogramModuleWidget.cxx  qSlicerDoseVolumeHistogramModuleWidget.h  qSlicerIsodoseModule.cxx  qSlicerIsodoseModule.h  qSlicerMarkupsModule.cxx
Modules/Loadable/Reformat/: qSlicerReformatModule.h  qSlicerReformatModuleWidget.h
Modules/Loadable/SRPlanWelcome/: CMakeLists.txt  qSRPlanNewPatientDialog.cxx  qSRPlanNewPatientDialog.h  qSlicerSceneReader.h  qSlicerWelcomeModule.cxx  qSlicerWelcomeModuleWidget.cxx  qSlicerWelcomeModuleWidget.h
Modules/Loadable/SegmentComparison/: CMakeLists.txt  qSlicerSegmentComparisonModule.cxx  (+3 more)
SelfDebug/: CMakeLists.txt  qMRMLNodeComboBoxTest1.cxx  qMRMLNodeComboBoxTest4.cxx
(+617 files in other folders)
